Add section on bypassing launcher